ADT structure changes / testcases / topsort implementation

--- a/UE05/graphs/CMakeLists.txt
+++ b/UE05/graphs/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.14)
-project(untitled C)
+project(graphs C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(untitled test.c graph_includer.h graph_selector.h graph_list/graph_list.h graph_list/graph_list.c graph_matrix/graph_matrix.h graph_matrix/graph_matrix.c graph_list/edge_list.h graph_list/edge_list.c graph_list/types.h)
+add_executable(graphs test.c test.h graph_list/graph_list.c graph_list/graph_list.h graph_list/types.h graph_list/edge_list.c graph_list/edge_list.h)
