--- a/UE07/src/wmb/CMakeLists.txt
+++ b/UE07/src/wmb/CMakeLists.txt
@@ -3,4 +3,4 @@ project(adt)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(adt main.cpp car.cpp car.h engine.cpp engine.h tire.cpp tire.h)
+add_executable(adt main.cpp car.cpp car.h engine.cpp engine.h tire.cpp tire.h main.h)
