--- a/UE07/src/adt/CMakeLists.txt
+++ b/UE07/src/adt/CMakeLists.txt
@@ -3,4 +3,4 @@ project(adt)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(adt main.cpp graph_t.cpp vertex_t.cpp edge_t.cpp edge_t.h edge_list_t.cpp edge_list_t.h)
+add_executable(adt main.cpp graph_t.cpp vertex_t.cpp edge_t.cpp edge_t.h handle_t.cpp handle_t.h)
